@@ -51,6 +51,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11467: Fix urlparse behavior when handling urls which contains scheme 
+  specific part only digits. Patch by Santoso Wijaya.
+
 - Issue #11474: Fix the bug with url2pathname() handling of '/C|/' on Windows.
   Patch by Santoso Wijaya.
 
